# dolfin_navier_scipy

./: .buildinfo  .gitignore  .readthedocs.yml  .zenodo.json  CHANGELOG.md  CODE.yml  Code.html  README.md  __init__.py  cont_obs_utils.py  data_output_utils.py  dolfin_to_sparrays.py  exp_mats_script.py  genindex.html  get_exp_nsmats.py  index.html  objects.inv  problem_setups.py  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  stokes_navier_utils.py  testit.py  testit_steadystate.py  time_dep_nse_.py
docs/: Code.rst  Makefile  conf.py  index.rst  readthedocs-pip-requirements.txt
dolfin_navier_scipy/: __init__.py  cache_simustates_utils.py  data_output_utils.py  dolfin_to_sparrays.py  exp_mats_script.py  get_exp_nsmats.py  lin_alg_utils.py  nse_steadystate.py  problem_setups.py  residual_checks.py  stokes_navier_utils.py  time_int_utils.py  time_step_schemes.py
modules/: index.html
scripts/: exp_mats_script.py
sources/: Code.txt  index.txt
tests/: checkdofmap.py  mini_setup.py  solve_nse_quadraticterm.py  start-generic-stst-sim.sh  start-generic-tdp-sim.sh  start-tdp-convcheck.sh  steadystate_double_rotcyl.py  steadystate_generic.py  steadystate_nse.py  steadystate_nse_brob.py  steadystate_rotcyl.py  steadystate_schaefer-turek_2D-1.py  tdp_2D_simu.py  tdp_convcheck.py  test_boundaries_poisson.py  test_penarobinbc_cyl.py  test_pfromv.py  test_residuals.py  test_units_fenicsci.py  test_units_inoutopas.py  test_units_pfromv.py  test_units_residuals.py  time_dep_nse.py  time_dep_nse_.py  time_dep_nse_bcrob.py  tmptest_inpop.py  (+8 more)
(+14 files in other folders)
