[metadata]
name = dolfin_navier_scipy

author = Jan Heiland
author-email = jnhlnd@gmail.com
maintainer = Jan Heiland
maintainer-email = jnhlnd@gmail.com
summary = A Scipy-Fenics interface for incompressible Navier-Stokes
description-file = README.md
long_description_content_type = text/markdown
home-page = https://github.com/highlando/dolfin_navier_scipy
license = GPLv3
classifier =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[files]
packages =
    dolfin_navier_scipy
